--- a/config.json
+++ b/config.json
@@ -5,7 +5,7 @@
     "safeAccountPrivatekey": "",
     "flashbotsSigningKey": "",
     "apiKeys": {
-        "alchemy": "-LFSHvUO",
+        "alchemy": "",
         "moralis": ""
     },
     "tenderly": {
